@@ -17,7 +17,6 @@
 
 package com.echobox.api.linkedin.client;
 
-import com.echobox.api.linkedin.client.WebRequestor.Response;
 import com.echobox.api.linkedin.exception.LinkedInAPIException;
 import com.echobox.api.linkedin.exception.LinkedInAccessTokenException;
 import com.echobox.api.linkedin.exception.LinkedInException;
@@ -55,15 +54,15 @@ import java.util.List;
 import java.util.Map;
 
 /**
- * Default implementation of a LinkedIn API client.
- * @author Joanna
+ * Default implementation of a LinkedIn versioned API client.
+ * @author Kenneth Wong
  *
  */
-@Deprecated
-public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedInClient {
-  // off code duplication check, as this will be removed when migration completed
-  // CPD-OFF
-  private static final Logger LOGGER = LoggerFactory.getLogger(DefaultLinkedInClient.class);
+public class DefaultVersionedLinkedInClient extends BaseLinkedInClient
+    implements VersionedLinkedInClient {
+  
+  private static final Logger LOGGER =
+      LoggerFactory.getLogger(DefaultVersionedLinkedInClient.class);
 
   /**
    * HTTP parameter names.
@@ -89,72 +88,99 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
    * The client's secret parameter name
    */
   protected static final String CLIENT_SECRET_PARAM_NAME = "client_secret";
-
+  
   /**
    * Reserved "result format" parameter name.
    */
   protected static final String FORMAT_PARAM_NAME = "format";
-
+  
   /**
    * API error response 'code' attribute name.
    */
   protected static final String ERROR_CODE_ATTRIBUTE_NAME = "serviceErrorCode";
-
+  
   /**
    * API error response 'message' attribute name.
    */
   protected static final String ERROR_MESSAGE_ATTRIBUTE_NAME = "message";
-
+  
   /**
    * Endpoint to fetch the access token query.
    */
   protected static final String ENDPOINT_ACCESS_TOKEN =
       "https://www.linkedin.com/oauth/v2/accessToken";
-
+  
   /**
    * Reserved "start" parameter name.
    */
   protected static final String START = "start";
-
+  
   /**
    * Reserved "end" parameter name.
    */
   protected static final String END = "end";
+  
+  /**
+   * Request header to put API version
+   */
+  private static final String HEADER_NAME_VERSION = "Linkedin-Version";
 
+  /**
+   * Default LinkedIn-version header
+   */
+  public static final String DEFAULT_VERSIONED_MONTH = "202301";
+  
+  /**
+   * Request header of protocol
+   */
+  private static final String HEADER_NAME_PROTOCOL = "X-Restli-Protocol-Version";
+  
+  /**
+   * Default LinkedIn Protocol
+   */
+  private static final String DEFAULT_LINKEDIN_PROTOCOL = "2.0.0";
+  
   /**
    * Graph API access token.
    */
   protected String accessToken;
-
+  
   /**
    * Knows how to map Graph API exceptions to formal Java exception types.
    */
   protected LinkedInExceptionMapper linkedinExceptionMapper;
-
+  
   /**
    * API endpoint URL.
    */
   protected static final String LINKEDIN_API_ENDPOINT_URL = "https://api.linkedin.com";
-
+  
   /**
    * API endpoint URL.
    */
   protected static final String LINKEDIN_MEDIA_API_ENDPOINT_URL =
       "https://api.linkedin.com/media/upload";
-
+  
   /**
    * Version of API endpoint.
    */
-  protected Version apiVersion = Version.DEFAULT_VERSION;
-
+  protected Version apiVersion;
+  
+  /**
+   * LinkedIn-Version header of the API to be used (format: YYYYMM)
+   */
+  protected String versionedMonth;
+  
   /**
    * By default this is <code>false</code>, so real http DELETE is used
    */
   protected boolean httpDeleteFallback = false;
-
+  
+  private Map<String, String> defaultHeaders;
+  
   /**
    * Creates a LinkedIn API client with the given {@code accessToken}.
-   * 
+   *
    * @param accessToken
    *          A LinkedIn OAuth access token.
    * @throws GeneralSecurityException
@@ -162,13 +188,14 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
    * @throws IOException
    *          If the DefaultWebRequestor fails to initialise
    */
-  public DefaultLinkedInClient(String accessToken) throws GeneralSecurityException, IOException {
-    this(accessToken, Version.V2);
+  public DefaultVersionedLinkedInClient(String accessToken)
+      throws GeneralSecurityException, IOException {
+    this(accessToken, Version.VERSIONED);
   }
-
+  
   /**
    * Creates a LinkedIn API client with the given {@code accessToken}.
-   * 
+   *
    * @param accessToken
    *          A LinkedIn OAuth access token.
    * @param apiVersion
@@ -178,24 +205,24 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
    * @throws IOException
    *          If the DefaultWebRequestor fails to initialise
    */
-  public DefaultLinkedInClient(String accessToken, Version apiVersion)
+  public DefaultVersionedLinkedInClient(String accessToken, Version apiVersion)
       throws GeneralSecurityException, IOException {
     this(new DefaultWebRequestor(accessToken), new DefaultJsonMapper(), apiVersion);
   }
-
+  
   /**
    * Creates a LinkedIn API client with the given {@code apiVersion}.
    *
    * @param apiVersion
    *          Version of the api endpoint
    */
-  public DefaultLinkedInClient(Version apiVersion) {
+  public DefaultVersionedLinkedInClient(Version apiVersion) {
     this(null, new DefaultJsonMapper(), apiVersion, new DefaultLinkedInExceptionMapper());
   }
-
+  
   /**
    * Creates a LinkedIn API client with the given {@code accessToken}.
-   * 
+   *
    * @param webRequestor
    *          The {@link WebRequestor} implementation to use for sending requests to the API
    *          endpoint.
@@ -205,12 +232,12 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
    * @param apiVersion
    *          Version of the API endpoint
    */
-  public DefaultLinkedInClient(WebRequestor webRequestor, JsonMapper jsonMapper,
+  public DefaultVersionedLinkedInClient(WebRequestor webRequestor, JsonMapper jsonMapper,
       Version apiVersion) {
     this(webRequestor, jsonMapper, apiVersion, new DefaultLinkedInExceptionMapper());
     ValidationUtils.verifyParameterPresence("webRequestor", webRequestor);
   }
-
+  
   /**
    * Creates a LinkedIn API client with the given {@code accessToken}.
    *
@@ -225,30 +252,59 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
    * @param linkedinExceptionMapper
    *          Mapper class to handle LinkedIn exceptions
    */
-  public DefaultLinkedInClient(WebRequestor webRequestor, JsonMapper jsonMapper, Version apiVersion,
-      LinkedInExceptionMapper linkedinExceptionMapper) {
+  public DefaultVersionedLinkedInClient(WebRequestor webRequestor, JsonMapper jsonMapper,
+      Version apiVersion, LinkedInExceptionMapper linkedinExceptionMapper) {
+    this(webRequestor, jsonMapper, apiVersion, linkedinExceptionMapper, DEFAULT_VERSIONED_MONTH);
+  }
+  
+  /**
+   * Creates a LinkedIn API client with the given {@code accessToken}.
+   *
+   * @param webRequestor
+   *          The {@link WebRequestor} implementation to use for sending requests to the API
+   *          endpoint.
+   * @param jsonMapper
+   *          The {@link JsonMapper} implementation to use for mapping API response JSON to Java
+   *          objects.
+   * @param apiVersion
+   *          Version of the API endpoint
+   * @param linkedinExceptionMapper
+   *          Mapper class to handle LinkedIn exceptions
+   * @param versionedMonth
+   *          LinkedIn-version of the API
+   */
+  public DefaultVersionedLinkedInClient(WebRequestor webRequestor, JsonMapper jsonMapper,
+      Version apiVersion, LinkedInExceptionMapper linkedinExceptionMapper,
+      String versionedMonth) {
     ValidationUtils.verifyParameterPresence("jsonMapper", jsonMapper);
     ValidationUtils.verifyParameterPresence("apiVersion", apiVersion);
     ValidationUtils.verifyParameterPresence("linkedinExceptionMapper", linkedinExceptionMapper);
-
+    ValidationUtils.verifyParameterPresence("versionedMonth", versionedMonth);
+    
     this.webRequestor = webRequestor;
     this.jsonMapper = jsonMapper;
     this.apiVersion = apiVersion;
     this.linkedinExceptionMapper = linkedinExceptionMapper;
+    this.versionedMonth = versionedMonth;
+    if (this.defaultHeaders == null) {
+      this.defaultHeaders = new HashMap<>();
+      this.defaultHeaders.put(HEADER_NAME_VERSION, versionedMonth);
+    }
   }
-
+  
   @Override
   public Version getVersion() {
     return apiVersion;
   }
-
+  
   @Override
   public <T> T fetchObject(String object, Class<T> objectType, Parameter... parameters) {
     ValidationUtils.verifyParameterPresence("object", object);
     ValidationUtils.verifyParameterPresence("objectType", objectType);
-    return jsonMapper.toJavaObject(makeRequest(object, parameters), objectType);
+    WebRequestor.Response response = makeRequest(object, parameters);
+    return jsonMapper.toJavaObject(response.getBody(), objectType);
   }
-
+  
   @Override
   public <T> Connection<T> fetchConnection(String connection, Class<T> connectionType,
       Parameter... parameters) {
@@ -261,29 +317,28 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
     String parameterString = toParameterString(queryParams);
     final String finalParameterString =
         StringUtils.isBlank(parameterString) ? "" : ("?" + parameterString);
-    return new Connection<T>(fullEndpoint + finalParameterString, this,
-        makeRequest(connection, queryParams), connectionType);
+    WebRequestor.Response response = makeRequest(connection, queryParams);
+    return new Connection<>(fullEndpoint + finalParameterString, this, response.getBody(),
+        connectionType);
   }
-
+  
   @Override
   public <T> Connection<T> fetchConnectionPage(String connectionPageUrl, Class<T> connectionType) {
-    String connectionJson = makeRequestAndProcessResponseJSON(new Requestor() {
-      @Override
-      public Response makeRequest() throws IOException {
-        String pageURL = apiVersion.isSpecifyFormat()
-            ? URLUtils.replaceOrAddQueryParameter(connectionPageUrl, "format", "json")
-            : connectionPageUrl;
-        return webRequestor.executeGet(pageURL);
-      }
+    String connectionJson = makeRequestAndProcessResponseJSON(() -> {
+      String pageURL = apiVersion.isSpecifyFormat()
+          ? URLUtils.replaceOrAddQueryParameter(connectionPageUrl, "format", "json")
+          : connectionPageUrl;
+      return webRequestor.executeGet(pageURL, defaultHeaders);
     });
-
+    
     return new Connection<T>(connectionPageUrl, this, connectionJson, connectionType);
   }
-
+  
   @Override
   public WebRequestor.Response publish(String connection, Object jsonBody,
       Parameter... parameters) {
-    throw new UnsupportedOperationException();
+    return makeRequest(connection, true, false, jsonBody,
+        new ArrayList<>(), parameters);
   }
   
   @Override
@@ -291,15 +346,16 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
       Parameter... parameters) {
     return publish(connection, objectType, jsonBody, new ArrayList<>(), parameters);
   }
-
+  
   @Override
   public <T> T publish(String connection, Class<T> objectType, Object jsonBody,
       List<BinaryAttachment> binaryAttachments, Parameter... parameters) {
-
-    return jsonMapper.toJavaObject(makeRequest(connection, true, false, jsonBody,
-        binaryAttachments, parameters), objectType);
+    
+    WebRequestor.Response response = makeRequest(connection, true, false, jsonBody,
+        binaryAttachments, parameters);
+    return jsonMapper.toJavaObject(response.getBody(), objectType);
   }
-
+  
   @Override
   public <T> T publish(String connection, Class<T> objectType, Object jsonBody,
       BinaryAttachment binaryAttachment, Parameter... parameters) {
@@ -308,17 +364,19 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
       attachments = new ArrayList<>();
       attachments.add(binaryAttachment);
     }
-
+    
     return publish(connection, objectType, jsonBody, attachments, parameters);
   }
-
+  
   @Override
   public boolean deleteObject(String object, Parameter... parameters) {
     ValidationUtils.verifyParameterPresence("object", object);
-
-    String responseString = makeRequest(object, false, true, null, null, parameters);
+    
+    WebRequestor.Response response = makeRequest(object, false, true, null, null, parameters);
+    String responseBody = response.getBody();
+  
     try {
-      JsonValue jObj = Json.parse(responseString);
+      JsonValue jObj = Json.parse(responseBody);
       if (jObj.isObject()) {
         if (jObj.asObject().get("result") != null) {
           return jObj.asObject().get("result").asString().contains("Successfully deleted");
@@ -334,10 +392,10 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
             + "instead", jex);
       }
     }
-
-    return "true".equals(responseString);
+    
+    return "true".equals(responseBody);
   }
-
+  
   @Override
   public AccessToken obtainUserAccessToken(String appId, String appSecret, String redirectUri,
       String verificationCode) {
@@ -345,27 +403,28 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
     ValidationUtils.verifyParameterPresence("appSecret", appSecret);
     ValidationUtils.verifyParameterPresence("redirectUri", redirectUri);
     ValidationUtils.verifyParameterPresence("verificationCode", verificationCode);
-
+    
     try {
       this.webRequestor = new DefaultWebRequestor(appId, appSecret);
-  
+      
       Map<String, String> headers = new HashMap<>();
       headers.put("Content-Type", "application/x-www-form-urlencoded");
-
-      final String response = makeRequestFull(ENDPOINT_ACCESS_TOKEN, true, false, null,
+      
+      final WebRequestor.Response response = makeRequestFull(ENDPOINT_ACCESS_TOKEN,
+          true, false, null,
           headers, Collections.emptyList(), Parameter.with(GRANT_TYPE_PARAM_NAME,
-          "authorization_code"),
+              "authorization_code"),
           Parameter.with(CODE_PARAM_NAME, verificationCode),
           Parameter.with(REDIRECT_URI_PARAM_NAME, redirectUri),
           Parameter.with(CLIENT_ID_PARAM_NAME, appId),
           Parameter.with(CLIENT_SECRET_PARAM_NAME, appSecret));
-
-      return getAccessTokenFromResponse(response);
+      
+      return getAccessTokenFromResponse(response.getBody());
     } catch (Exception ex) {
       throw new LinkedInAccessTokenException(ex);
     }
   }
-
+  
   private AccessToken getAccessTokenFromResponse(String response) {
     try {
       return getJsonMapper().toJavaObject(response, AccessToken.class);
@@ -375,46 +434,46 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
       return AccessToken.fromQueryString(response);
     }
   }
-
+  
   @Override
   public AccessToken obtainAppAccessToken(String appId, String appSecret) {
     throw new UnsupportedOperationException("Obtain user access token is not yet implemented");
   }
-
+  
   @Override
   public JsonMapper getJsonMapper() {
     return jsonMapper;
   }
-
+  
   @Override
   public WebRequestor getWebRequestor() {
     return webRequestor;
   }
-
+  
   @Override
   protected String createEndpointForApiCall(String apiCall, boolean hasAttachment) {
     while (apiCall.startsWith("/")) {
       apiCall = apiCall.substring(1);
     }
-
+    
     if (hasAttachment) {
       return getLinkedInMediaEndpointUrl();
     }
-
+    
     String baseUrl = getLinkedInEndpointUrl();
-
+    
     return String.format("%s/%s", baseUrl, apiCall);
   }
-
+  
   /**
    * Returns the base endpoint URL for the LinkedIn API.
-   * 
+   *
    * @return The base endpoint URL for the LinkedIn API.
    */
   protected String getLinkedInEndpointUrl() {
     return LINKEDIN_API_ENDPOINT_URL + '/' + apiVersion.getUrlElement();
   }
-
+  
   /**
    * Gets LinkedIn media endpoint URL
    *
@@ -423,11 +482,11 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
   protected String getLinkedInMediaEndpointUrl() {
     return LINKEDIN_MEDIA_API_ENDPOINT_URL;
   }
-
+  
   /**
-   * Coordinates the process of executing the API request GET/POST and processing the response we 
+   * Coordinates the process of executing the API request GET/POST and processing the response we
    * receive from the endpoint.
-   * 
+   *
    * @param endpoint
    *          LinkedIn Graph API endpoint.
    * @param parameters
@@ -436,57 +495,57 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
    * @throws LinkedInException
    *           If an error occurs while making the LinkedIn API POST or processing the response.
    */
-  protected String makeRequest(String endpoint, Parameter... parameters) {
+  protected WebRequestor.Response makeRequest(String endpoint, Parameter... parameters) {
     return makeRequest(endpoint, false, false, null, null, parameters);
   }
-
+  
   /**
-   * Coordinates the process of executing the API request GET/POST and processing the response we 
-   * receive from the endpoint, will append this endpoint on to the base LinkedIn API endpoint 
+   * Coordinates the process of executing the API request GET/POST and processing the response we
+   * receive from the endpoint, will append this endpoint on to the base LinkedIn API endpoint
    * before calling.
-   * 
+   *
    * @param endpoint
    *          LinkedIn Graph API endpoint.
    * @param executeAsPost
-   *          {@code true} to execute the web request as a {@code POST}, {@code false} to execute 
+   *          {@code true} to execute the web request as a {@code POST}, {@code false} to execute
    *          as a {@code GET}.
    * @param executeAsDelete
    *          {@code true} to add a special 'treat this request as a {@code DELETE}' parameter.
    * @param jsonBody
    *          Post JSON body
    * @param binaryAttachments
-   *          A list of binary files to include in a {@code POST} request. Pass {@code null} if no 
+   *          A list of binary files to include in a {@code POST} request. Pass {@code null} if no
    *          attachment should be sent.
    * @param parameters
    *          Arbitrary number of parameters to send along to LinkedIn as part of the API call.
-   * @return The JSON returned by LinkedIn for the API call.
+   * @return The WebRequestor response returned by LinkedIn for the API call.
    * @throws LinkedInException
    *           If an error occurs while making the LinkedIn API POST or processing the response.
    */
-  protected String makeRequest(String endpoint, final boolean executeAsPost,
+  protected WebRequestor.Response makeRequest(String endpoint, final boolean executeAsPost,
       final boolean executeAsDelete, Object jsonBody,
       final List<BinaryAttachment> binaryAttachments, Parameter... parameters) {
-
+    
     if (!endpoint.startsWith("/")) {
       endpoint = "/" + endpoint;
     }
-
+    
     final String fullEndpoint = createEndpointForApiCall(endpoint,
         binaryAttachments != null && !binaryAttachments.isEmpty());
 
     return makeRequestFull(fullEndpoint, executeAsPost, executeAsDelete, jsonBody,
-        null, binaryAttachments, parameters);
+        defaultHeaders, binaryAttachments, parameters);
   }
-
+  
   /**
-   * Coordinates the process of executing the API request GET/POST and processing the response we 
-   * receive from a full endpoint, will call this endpoint directly without further processing 
+   * Coordinates the process of executing the API request GET/POST and processing the response we
+   * receive from a full endpoint, will call this endpoint directly without further processing
    * the URL.
    *
    * @param fullEndpoint
    *          LinkedIn Graph API endpoint.
    * @param executeAsPost
-   *          {@code true} to execute the web request as a {@code POST}, {@code false} to execute 
+   *          {@code true} to execute the web request as a {@code POST}, {@code false} to execute
    *          as a {@code GET}.
    * @param executeAsDelete
    *          {@code true} to add a special 'treat this request as a {@code DELETE}' parameter.
@@ -495,51 +554,51 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
    * @param headers
    *          The headers for the request
    * @param binaryAttachments
-   *          A list of binary files to include in a {@code POST} request. Pass {@code null} if no 
+   *          A list of binary files to include in a {@code POST} request. Pass {@code null} if no
    *          attachment should be sent.
    * @param parameters
    *          Arbitrary number of parameters to send along to LinkedIn as part of the API call.
-   * @return The JSON returned by LinkedIn for the API call.
+   * @return The WebRequestor response returned by LinkedIn for the API call.
    */
-  protected String makeRequestFull(String fullEndpoint, final boolean executeAsPost,
+  protected WebRequestor.Response makeRequestFull(String fullEndpoint, final boolean executeAsPost,
       final boolean executeAsDelete, Object jsonBody, Map<String, String> headers,
       final List<BinaryAttachment> binaryAttachments, Parameter... parameters) {
     verifyParameterLegality(parameters);
-
+    
     if (executeAsDelete && isHttpDeleteFallback()) {
       parameters = parametersWithAdditionalParameter(Parameter.with(METHOD_PARAM_NAME, "delete"),
           parameters);
     }
-
+    
     String parameterString = toParameterString(parameters);
     final String finalParameterString =
         StringUtils.isBlank(parameterString) ? "" : ("?" + parameterString);
-
-    return makeRequestAndProcessResponseJSON(new Requestor() {
+    
+    return makeRequestAndProcessResponse(new Requestor() {
       /**
        * Make the request
-       * @see com.echobox.api.linkedin.client.DefaultLinkedInClient.Requestor#makeRequest()
+       * @see DefaultVersionedLinkedInClient.Requestor#makeRequest()
        */
       @Override
-      public Response makeRequest() throws IOException {
+      public WebRequestor.Response makeRequest() throws IOException {
         if (executeAsDelete && !isHttpDeleteFallback()) {
-          return webRequestor.executeDelete(fullEndpoint + finalParameterString);
+          return webRequestor.executeDelete(fullEndpoint + finalParameterString, headers);
         } else {
           return executeAsPost
               ? webRequestor.executePost(fullEndpoint, parameterString,
-                  jsonBody == null ? null : jsonMapper.toJson(jsonBody, true),
-                  headers,
-                  binaryAttachments == null ? null
-                      : binaryAttachments.toArray(new BinaryAttachment[binaryAttachments.size()]))
-              : webRequestor.executeGet(fullEndpoint + finalParameterString);
+              jsonBody == null ? null : jsonMapper.toJson(jsonBody, true),
+              headers,
+              binaryAttachments == null ? null
+                  : binaryAttachments.toArray(new BinaryAttachment[binaryAttachments.size()]))
+              : webRequestor.executeGet(fullEndpoint + finalParameterString, headers);
         }
       }
     });
   }
-
+  
   /**
    * Generate the parameter string to be included in the LinkedIn API request.
-   * 
+   *
    * @param parameters
    *          Arbitrary number of extra parameters to include in the request.
    * @return The parameter string to include in the LinkedIn API request.
@@ -549,10 +608,10 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
   protected String toParameterString(Parameter... parameters) {
     return toParameterString(apiVersion.isSpecifyFormat(), parameters);
   }
-
+  
   /**
    * Generate the parameter string to be included in the LinkedIn API request.
-   * 
+   *
    * @param withJsonParameter
    *          add additional parameter format with type json
    * @param parameters
@@ -566,35 +625,35 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
       parameters = parametersWithAdditionalParameter(Parameter.with(FORMAT_PARAM_NAME, "json"),
           parameters);
     }
-
+    
     StringBuilder parameterStringBuilder = new StringBuilder();
     boolean first = true;
-
+    
     for (Parameter parameter : parameters) {
       if (first) {
         first = false;
       } else {
         parameterStringBuilder.append("&");
       }
-
+      
       parameterStringBuilder.append(URLUtils.urlEncode(parameter.name));
       parameterStringBuilder.append("=");
       parameterStringBuilder.append(urlEncodedValueForParameterName(parameter.value));
     }
-
+    
     return parameterStringBuilder.toString();
   }
-
+  
   /**
    * returns if the fallback post method (<code>true</code>) is used or the http delete
    * (<code>false</code>)
-   * 
+   *
    * @return a flag whether HTTP delete is a fallback
    */
   public boolean isHttpDeleteFallback() {
     return httpDeleteFallback;
   }
-
+  
   /**
    * Make request and process response (json).
    *
@@ -602,18 +661,18 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
    * @return the JSON response
    */
   protected String makeRequestAndProcessResponseJSON(Requestor requestor) {
-    Response response = makeRequestAndProcessResponse(requestor);
+    WebRequestor.Response response = makeRequestAndProcessResponse(requestor);
     return response.getBody();
   }
-
+  
   /**
    * Make request and process the response
    *
    * @param requestor Requestor interface to make requests to the LinkedIn API
    * @return the response
    */
-  protected Response makeRequestAndProcessResponse(Requestor requestor) {
-    Response response;
+  protected WebRequestor.Response makeRequestAndProcessResponse(Requestor requestor) {
+    WebRequestor.Response response;
     
     // Perform a GET or POST to the API endpoint
     try {
@@ -656,7 +715,7 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
     if (HttpStatus.SC_INTERNAL_SERVER_ERROR == response.getStatusCode()) {
       throw new LinkedInNetworkException("LinkedIn request failed", response.getStatusCode());
     }
-  
+    
     // If there was no response error information and this was a 401
     // error, something weird happened on LinkedIn's end. Assume it is a Oauth error.
     if (HttpStatus.SC_UNAUTHORIZED == response.getStatusCode()) {
@@ -665,7 +724,7 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
     
     return response;
   }
-
+  
   /**
    * Requestor interface to make requests to the LinkedIn API
    * @author Joanna
@@ -677,9 +736,9 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
      * @return the received response
      * @throws IOException the IO exception
      */
-    Response makeRequest() throws IOException;
+    WebRequestor.Response makeRequest() throws IOException;
   }
-
+  
   /**
    * Throws an exception if LinkedIn returned an error response.
    * This method extracts relevant information from the error JSON and throws an exception which
@@ -699,14 +758,14 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
       Integer httpStatusCode) {
     try {
       skipResponseStatusExceptionParsing(json);
-
+      
       JsonObject errorObject = Json.parse(json).asObject();
-
+      
       // If there's an Integer error code, pluck it out.
       Integer errorCode = errorObject.get(ERROR_CODE_ATTRIBUTE_NAME) != null
           ? Integer.parseInt(errorObject.get(ERROR_CODE_ATTRIBUTE_NAME).toString())
           : null;
-
+      
       if (linkedinExceptionMapper != null) {
         throw linkedinExceptionMapper.exceptionForTypeAndMessage(errorCode, httpStatusCode,
             errorObject.getString(ERROR_MESSAGE_ATTRIBUTE_NAME, ""), false, errorObject);
@@ -719,7 +778,7 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
       }
     }
   }
-
+  
   /**
    * Implementation of {@code LinkedInExceptionMapper} that maps LinkedIn API exceptions.
    * @author Joanna
@@ -729,40 +788,40 @@ public class DefaultLinkedInClient extends BaseLinkedInClient implements LinkedI
     public LinkedInException exceptionForTypeAndMessage(Integer errorCode, Integer httpStatusCode,
         String message, Boolean isTransient, JsonObject rawError) {
       // Bad Request - client mistakes
-      if (new Integer(400).equals(httpStatusCode)) {
+      if (Integer.valueOf(HttpStatus.SC_BAD_REQUEST).equals(httpStatusCode)) {
         return new LinkedInQueryParseException(message, errorCode, httpStatusCode, rawError);
       }
-
+      
       // Unauthorised
-      if (new Integer(401).equals(httpStatusCode)) {
+      if (Integer.valueOf(HttpStatus.SC_UNAUTHORIZED).equals(httpStatusCode)) {
         return new LinkedInOAuthException(message, errorCode, httpStatusCode, rawError);
       }
-
+      
       // Resource not found
-      if (new Integer(404).equals(httpStatusCode)) {
+      if (Integer.valueOf(HttpStatus.SC_NOT_FOUND).equals(httpStatusCode)) {
         return new LinkedInResourceNotFoundException(message, errorCode, httpStatusCode,
             rawError);
       }
-
+      
       // 429 Rate limit
-      if (new Integer(429).equals(httpStatusCode)) {
+      if (Integer.valueOf(HttpStatus.SC_TOO_MANY_REQUESTS).equals(httpStatusCode)) {
         return new LinkedInRateLimitException(message, errorCode, httpStatusCode,
             rawError);
       }
-
+      
       // Internal Server Error
-      if (new Integer(500).equals(httpStatusCode)) {
+      if (Integer.valueOf(HttpStatus.SC_INTERNAL_SERVER_ERROR).equals(httpStatusCode)) {
         return new LinkedInInteralServerException(message, errorCode, httpStatusCode, rawError);
       }
-
+      
       // Gateway timeout
-      if (new Integer(504).equals(httpStatusCode)) {
+      if (Integer.valueOf(HttpStatus.SC_GATEWAY_TIMEOUT).equals(httpStatusCode)) {
         return new LinkedInGatewayTimeoutException(message, errorCode, httpStatusCode, rawError);
       }
-
+      
       // Don't recognize this exception type? Just go with the standard LinkedInAPIException.
       return new LinkedInAPIException(message, errorCode, httpStatusCode, rawError);
     }
   }
-  // CPD-ON
+  
 }
